Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113782

error: no member named 'unary_function' in namespace 'std'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5, 6.6
    • 6.5.0
    • Multimedia
    • None
    • macOS
    • 82f7f3de0 (dev), eb3bbafe1 (6.5), 24972dafd (tqtc/lts-6.2)

       

      std::unary_function was removed with c++17

      it seems we can just remove it to keep compiling:

       

      diff -ur a/qtmultimedia/src/plugins/multimedia/darwin/camera/avfcamerautility.mm b/qtmultimedia/src/plugins/multimedia/darwin/camera/avfcamerautility.mm 
      — a/qtmultimedia/src/plugins/multimedia/darwin/camera/avfcamerautility.mm     2023-03-11 22:46:05.000000000 -0500 
      +++ b/qtmultimedia/src/plugins/multimedia/darwin/camera/avfcamerautility.mm     2023-04-01 19:30:45.489302095 -0400 
      @@ -69,7 +69,7 @@ 
          } 
      }; 
       
      -struct FormatHasNoFPSRange : std::unary_function<AVCaptureDeviceFormat *, bool> 
      +struct FormatHasNoFPSRange 
      { 
          bool operator() (AVCaptureDeviceFormat *format) 
          {

       

      (we have been carrying this patch at conda-forge)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            artemiy Artem Dyomin
            jschueller Julien Schueller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes