Remove std::unary_function usage

std::unary_function was removed with c++17

Pick-to: 6.5
Task-number: QTBUG-113782
Change-Id: I4e330cd1f89dc14936acbccdeee8378ea4938870
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Pavel Dubsky <pavel.dubsky@qt.io>